# guardian

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  package.json  pnpm-lock.yaml  release.ps1  yapilan.md
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: release.yml
docs/specs/: 2026-07-08-process-edit-design.md  installer-setup.md
docs/specs/plans/: 2026-07-07-installer-setup.md  2026-07-08-process-edit.md
docs/superpowers/plans/: 2026-07-09-restart-process.md
docs/superpowers/specs/: 2026-07-09-restart-process-design.md
docs/wiki/: Index.md  Installer-ve-Guncelleme.md  Process-Yonetimi.md
src/: App.vue
src-tauri/: Cargo.toml  build_error.txt  build_error_utf8.txt  build_error_v2.txt  build_error_v3.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: commands.toml
src-tauri/src/: lib.rs  main.rs  process_manager.rs
src/components/: UpdateManager.vue
