[package]
name = "guardian"
version = "0.1.1"
description = "Gardiyan"
authors = ["Beyhan Oğur <beyhan@beyhan.dev>"]
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "guardian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
chrono = { version = "0.4.45", features = ["serde"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }

